--- a/Timetable.html
+++ b/Timetable.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-soft Computingale=1.0">
     <title>Document</title>
     <style>
-        table td:nth-child(4),
+        /* table td:nth-child(4), */
         table td:nth-child(7) {
 
             border: none;
@@ -14,86 +14,87 @@
 
         }
     </style>
+    <script src="java.js"></script>
 </head>
 
 <body>
-    <table border="1" cellpadding="20" cellspacing="0">
+    <table border="1" cellpadding="12" cellspacing="0">
         <caption><strong>College Lecture Timetable</strong></caption>
         <thead>
             <tr>
                 <th>Day</th>
-                <th>8:50 - 9:40</th>
-                <th>9:40 - 10:30</th>
-                <th>10:30 - 10:40<br>break </th>
-                <th>10:40 - 11:30</th>
-                <th>11:30 - 12:20</th>
-                <th>12:20 - 1:10<br><b>Lunch Break</b></th>
-                <th>1:10 - 2:00</th>
-                <th>2:00 - 2:50</th>
-                <th>2:50 - 3:40</th>
-                <th>3:40 - 4:30</th>
+                <th>5:00 - 7:20</th>
+                <td style="width: 300px;"><center><strong>7:21 - 5:10</strong></center></td>
+                <th>5:11 - 6:20</th>
+                <th>6:21 - 6:30<br>break </th>
+                <th>6:31 - 8:20</th>
+                <th>8:21 - 9:00<br><b>Lunch Break</b></th>
+                <th>9:01 - 10:00</th>
+                <th>10:01 - 11:00</th>
+                <th>11:01 - 12:00</th>
+                <!-- <th>11:01 - 12:00</th> -->
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Monday</td>
                 <td>DSA</td>
-                <td>DBMS</td><td></td>
-                <td>DA-LAB</td>
-                <td>DBMS-LAB</td>
+                <td style="width: 300px;"><center><strong>COLLEGE</strong></center></td>
+                <td>DA</td><td></td>
+                <td>C++</td>
                 <td></td>
-                <td>Soft Computing</td>
-                <td>LA/LR</td>
-                <td>Soft Skill</td>
+                <td>Cyber-Sec</td>
                 <td>DAA</td>
+                <td>Soft Skill</td>
+                <!-- <td>DAA</td> -->
             </tr>
             <tr>
                 <td>Tuesday</td>
                 <td>DSA</td>
+                <td style="width: 300px;"><center><strong>COLLEGE</strong></center></td>
                 <td>DBMS</td><td></td>
-                <td>DA-LAB</td>
-                <td>DBMS-LAB</td>
+                <td>OOSD</td>
                 <td></td>
-                <td>Soft Computing</td>
-                <td>LA/LR</td>
+                <td>C++</td>
+                <td>Domain</td>
                 <td>Soft Skill</td>
-                <td>DAA</td>
+                <!-- <td>DAA</td> -->
             </tr>
             <tr>
                 <td>Wednesday</td>
                 <td>DSA</td>
-                <td>DBMS</td><td></td>
-                <td>DA-LAB</td>
+                <td style="width: 300px;"><center><strong>COLLEGE</strong></center></td>
+                <td>AOSC</td><td></td>
                 <td>DBMS-LAB</td>
                 <td></td>
-                <td>Soft Computing</td>
+                <td>C++</td>
                 <td>LA/LR</td>
                 <td>Soft Skill</td>
-                <td>DAA</td>
+                <!-- <td>DAA</td> -->
             </tr>
             <tr>
                 <td>Thrusday</td>
                 <td>DSA</td>
-                <td>DBMS</td><td></td>
-                <td>DA-LAB</td>
+                <td style="width: 300px;"><center><strong>COLLEGE</strong></center></td>
+                <td>DA-LAB</td><td></td>
                 <td>DBMS-LAB</td>
                 <td></td>
                 <td>Soft Computing</td>
                 <td>LA/LR</td>
                 <td>Soft Skill</td>
-                <td>DAA</td>
+                <!-- <td>DAA</td> -->
             </tr>
             <tr>
                 <td>Friday</td>
                 <td>DSA</td>
-                <td>DBMS</td><td></td>
-                <td>DA-LAB</td>
+                <td style="width: 300px;"><center><strong>COLLEGE</strong></center></td>
+                <td>DA-LAB</td><td></td>
                 <td>DBMS-LAB</td>
                 <td></td>
                 <td>Soft Computing</td>
                 <td>LA/LR</td>
                 <td>Soft Skill</td>
-                <td>DAA</td>
+                <!-- <td>DAA</td> -->
             </tr>
         </tbody>
     </table>
