--- a/portfolio.html
+++ b/portfolio.html
@@ -3,114 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <title>B.Tech CSE-DS Portfolio</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Fonts for a professional look -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f4f6fa;
-            color: #222;
-            margin: 0;
-            padding: 0;
+            font-family: 'Inter', sans-serif;
+            background-color: #0d1117; /* GitHub-like dark background */
+            color: #c9d1d9; /* Light grey text */
         }
-        div {
-            background: #a2c5f2;
-            max-width: 800px;
-            margin: 40px auto 0 auto;
-            padding: 32px 40px 24px 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-        }
-        h1 {
-            color: #2a5298;
-            text-align: center;
-            margin-bottom: 24px;
-            letter-spacing: 1px;
-        }
-        section {
-            margin-bottom: 32px;
-        }
-        h2 {
-            color: #1e3c72;
-            border-bottom: 2px solid #e3e8f0;
-            padding-bottom: 6px;
-            margin-bottom: 12px;
-            font-size: 1.3em;
-        }
-        ul {
-            list-style: disc inside;
-            padding-left: 0;
-            margin: 0 0 0 10px;
-        }
-        li {
-            margin-bottom: 8px;
-            line-height: 1.6;
-        }
-        a {
-            color: #2a5298;
-            text-decoration: none;
-            transition: color 0.2s;
-        }
-        a:hover {
-            color: #1e3c72;
-            text-decoration: underline;
-        }
-        @media (max-width: 600px) {
-            div {
-                padding: 16px 8px;
-            }
-            h1 {
-                font-size: 1.5em;
-            }
+        .text-gradient {
+            background-image: linear-gradient(45deg, #a855f7, #6366f1);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
     </style>
 </head>
-<body>
-    <div>
-        <h1>Student Portfolio</h1>
-        <section>
-            <h2>About Me</h2>
-            <p>Hello! I am a 3rd year B.Tech student specializing in Computer Science and Engineering with a focus on Data Science (CSE-DS). I am passionate about technology, programming, and working on real-world projects both individually and in teams.</p>
+<body class="antialiased min-h-screen flex flex-col items-center">
+    
+    <!-- Hero Section -->
+    <header class="w-full max-w-4xl mx-auto py-12 md:py-24 px-4 sm:px-6 lg:px-8 text-center">
+        <div class="relative w-32 h-32 md:w-40 md:h-40 mx-auto mb-6">
+            <!-- Replace this with a link to your own profile picture -->
+            <img class="rounded-full w-full h-full object-cover border-4 border-purple-500" src="C:\Users\Hyper\OneDrive\Desktop\Drive\Official\propic.jpg" alt="Profile Picture">
+            <span class="absolute bottom-1 right-1 bg-green-500 rounded-full w-5 h-5 border-2 border-gray-800"></span>
+        </div>
+        <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight mb-2 text-white">
+            Hello, I'm <span class="text-gradient">Aditya sharma</span>
+        </h1>
+        <p class="text-lg md:text-xl text-gray-400">
+            A B.Tech 3rd-year student specializing in Computer Science with a focus on Data Science.
+        </p>
+    </header>
+
+    <!-- About Me Section -->
+    <main class="w-full max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 space-y-16 pb-16">
+        <section id="about" class="bg-gray-800 rounded-2xl p-8 md:p-12 shadow-xl border border-gray-700">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gradient">About Me</h2>
+            <p class="text-gray-300 leading-relaxed text-base md:text-lg">
+                I am a passionate and dedicated B.Tech student at AKTU University, currently in my 3rd year. My academic journey is centered around Computer Science and Engineering with a specialization in Data Science. I have a strong foundation in core CS concepts, with a particular interest in Web Development, data analysis, and software development. I enjoy building impactful projects and solving complex problems with code. I am always eager to learn new technologies and contribute to innovative solutions.
+            </p>
         </section>
-    </div>
-    <section>
-        <h2>Education</h2>
-        <ul>
-            <li>B.Tech in Computer Science and Engineering (Data Science), 3rd Year</li>
-            <li>University: AKTU</li>
-            <li>Expected Graduation: 2027</li>
-        </ul>
-    </section>
 
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>Programming Languages: Python, Java, C++</li>
-            <li>Web Development: HTML, CSS, JavaScript</li>
-            <li>Database Management: MySQL</li>
-            <li>Tools: Git, Jupyter Notebook</li>
-        </ul>
-    </section>
+        <!-- Skills Section -->
+        <section id="skills" class="bg-gray-800 rounded-2xl p-8 md:p-12 shadow-xl border border-gray-700">
+            <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gradient text-center">Skills</h2>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                <!-- Replace with your own skills -->
+                <div class="flex flex-col items-center text-center">
+                    <i class="fab fa-python text-5xl text-blue-400 mb-2"></i>
+                    <span class="text-gray-300">Python</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fas fa-database text-5xl text-green-400 mb-2"></i>
+                    <span class="text-gray-300">SQL</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fas fa-brain text-5xl text-red-400 mb-2"></i>
+                    <span class="text-gray-300">Machine Learning</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fas fa-chart-line text-5xl text-yellow-400 mb-2"></i>
+                    <span class="text-gray-300">Data Analysis</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fab fa-react text-5xl text-cyan-400 mb-2"></i>
+                    <span class="text-gray-300">ReactJS</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fab fa-github text-5xl text-gray-400 mb-2"></i>
+                    <span class="text-gray-300">Git/GitHub</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fas fa-code text-5xl text-purple-400 mb-2"></i>
+                    <span class="text-gray-300">Data Structures</span>
+                </div>
+                <div class="flex flex-col items-center text-center">
+                    <i class="fas fa-server text-5xl text-orange-400 mb-2"></i>
+                    <span class="text-gray-300">Web Development</span>
+                </div>
+            </div>
+        </section>
 
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>
-                <strong>Hotel Management System</strong> – Developed a complete hotel management application independently, handling booking, customer management, and billing functionalities.
-            </li>
-            <li>
-                <strong>Youtube Analyzer</strong> – Collaborated in a team to build a tool that analyzes YouTube channel data and provides insights using data visualization techniques.
-            </li>
-        </ul>
-    </section>
+        <!-- Projects Section -->
+        <section id="projects" class="bg-gray-800 rounded-2xl p-8 md:p-12 shadow-xl border border-gray-700">
+            <h2 class="text-2xl md:text-3xl font-bold mb-6 text-gradient text-center">My Projects</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+                <!-- Project 1 Card -->
+                <div class="bg-gray-900 rounded-xl p-6 border border-gray-700 transition-transform transform hover:scale-105 hover:border-purple-500">
+                    <h3 class="text-xl font-semibold text-white mb-2">Project 1: Hotel Management</h3>
+                    <p class="text-gray-400 mb-4 text-sm">
+                        A brief and engaging description of your first project. Talk about the technology used and the problem it solves.
+                    </p>
+                    <a href="https://github.com/your-username/your-repo-1" target="_blank" class="inline-flex items-center text-purple-400 hover:text-purple-300 transition-colors">
+                        <i class="fab fa-github mr-2"></i> View on GitHub
+                    </a>
+                </div>
 
-    <section>
-        <h2>Contact</h2>
-        <ul>
-            <li>Email: [Your Email]</li>
-            <li>LinkedIn: <a href="[Your LinkedIn URL]" target="_blank">[Your LinkedIn Name]</a></li>
-            <li>GitHub: <a href="[Your GitHub URL]" target="_blank">[Your GitHub Username]</a></li>
-        </ul>
-    </section>
+                <!-- Project 2 Card -->
+                <div class="bg-gray-900 rounded-xl p-6 border border-gray-700 transition-transform transform hover:scale-105 hover:border-purple-500">
+                    <h3 class="text-xl font-semibold text-white mb-2">Project 2: Youtube Video Analyzer</h3>
+                    <p class="text-gray-400 mb-4 text-sm">
+                        A brief and engaging description of your second project. Talk about the technology used and the problem it solves.
+                    </p>
+                    <a href="https://github.com/your-username/your-repo-1" target="_blank" class="inline-flex items-center text-purple-400 hover:text-purple-300 transition-colors">
+                        <i class="fab fa-github mr-2"></i> View on GitHub
+                    </a>
+                </div>
+
+                <!-- Project 3 Card -->
+                <div class="bg-gray-900 rounded-xl p-6 border border-gray-700 transition-transform transform hover:scale-105 hover:border-purple-500">
+                    <h3 class="text-xl font-semibold text-white mb-2">Project 3: Expense Tracker</h3>
+                    <p class="text-gray-400 mb-4 text-sm">
+                        Description of your second project. Explain its features and how it demonstrates your skills.
+                    </p>
+                    <a href="https://github.com/your-username/your-repo-3" target="_blank" class="inline-flex items-center text-purple-400 hover:text-purple-300 transition-colors">
+                        <i class="fab fa-github mr-2"></i> View on GitHub
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="bg-gray-800 rounded-2xl p-8 md:p-12 shadow-xl border border-gray-700 text-center">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gradient">Get in Touch</h2>
+            <p class="text-gray-300 mb-6 max-w-lg mx-auto">
+                I'm currently open to new opportunities and collaborations. Feel free to connect with me!
+            </p>
+            <div class="flex justify-center space-x-6">
+                <!-- GitHub -->
+                <a href="https://github.com/your-username" target="_blank" class="text-gray-400 hover:text-purple-400 transition-colors">
+                    <i class="fab fa-github text-4xl"></i>
+                </a>
+                <!-- LinkedIn -->
+                <a href="https://linkedin.com/in/your-profile" target="_blank" class="text-gray-400 hover:text-purple-400 transition-colors">
+                    <i class="fab fa-linkedin text-4xl"></i>
+                </a>
+                <!-- Email -->
+                <a href="mailto:your.email@example.com" class="text-gray-400 hover:text-purple-400 transition-colors">
+                    <i class="fas fa-envelope text-4xl"></i>
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="w-full text-center py-6 border-t border-gray-700 mt-auto">
+        <p class="text-gray-500 text-sm">
+            © 2024 Your Name. All Rights Reserved.
+        </p>
+    </footer>
+
 </body>
 </html>
