--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
     <header class="w-full max-w-4xl mx-auto py-12 md:py-24 px-4 sm:px-6 lg:px-8 text-center">
         <div class="relative w-32 h-32 md:w-40 md:h-40 mx-auto mb-6">
             <!-- Replace this with a link to your own profile picture -->
-            <img class="rounded-full w-full h-full object-cover border-4 border-purple-500" src="C:\Users\Hyper\OneDrive\Desktop\Drive\Official\propic.jpg" alt="Profile Picture">
+            <img class="rounded-full w-full h-full object-cover border-4 border-purple-500" src="propic.jpg" alt="Profile Picture">
             <span class="absolute bottom-1 right-1 bg-green-500 rounded-full w-5 h-5 border-2 border-gray-800"></span>
         </div>
         <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight mb-2 text-white">
